<resources>
    <string name="app_name">Simplest Valet</string>

    <string name="tv_login_welcome_h1">Welcome to SV</string>
    <string name="tv_login_welcome_h2">Choose an account to continue</string>

    <string name="hello_world">Login by</string>

    <string name="tv_connectivity_status">Checking internet&#8230;</string>
    <string name="tv_session_expired_warning">Google access token expired. Trying to create a new one</string>
    <string name="tv_connected_info">Connected to the internet via %1$s</string>
    <string name="tv_start_loading">Trying to login</string>
    <string name="tv_network_error">Sorry, offline mode is not available yet</string>

    <string name="tv_month_amount_preload">Loading&#8230;</string>
    <string name="tv_month_amount">Amount spent in %1$d/%2$s: %3$5.1f</string>
    <string name="tv_line_chart_description">Spending by dates</string>
    <string name="tv_pie_chart_label">Pie chart</string>
    <string name="tv_pie_chart_description">Categories</string>

    <string name="tv_search_summary">Found %1$d entries matched for \"%2$s\", total amount %3$.1f </string>
    <string name="tv_search_summary_error">Search error due to code %1$d </string>
    <string name="tv_search_entries_header">%1$d entries in %2$d/%3$02d. Total amount %4$.1f</string>
    <string name="tv_search_entries_content">%1$s  &#160;  &#160;  &#160; %2$s  &#160;  &#160; %3$.1f  %4$s</string>

    <string name="srv_hint">Some text in entry&#8230;</string>

    <string name="action_settings">Settings</string>

    <string name="main_action_settings">Settings</string>
    <string name="main_action_logout">Logout</string>

    <string name="choose_account">Choose Google Account</string>
    <string name="done">Done</string>
    <string name="selected_email">Selected email</string>
    <string name="cbx_keep_login">Keep me signed in</string>
    <string name="title_activity_main">Simplest Valet</string>

    <string name="title_activity_input">InputActivity</string>
    <string name="title_activity_chart">ChartActivity</string>

    <string name="title_input">Input new expense</string>

    <string name="fragment_input_title">Input new entry</string>
    <string name="fragment_chart_title">THIS WILL BE CHART SCREEN</string>
    <string name="fragment_pending_title">Pending Entries</string>

    <string name="tab_input_title">New entry</string>
    <string name="tab_chart_title">Spending chart</string>
    <string name="tab_search_title">Search</string>

    <string name="tv_load_saved_entry">Or load from saved entries</string>

    <string name="et_hint_type">Type</string>
    <string name="et_hint_amount">Amount</string>
    <string name="et_hint_note">Note</string>

    <string name="btn_add_entry">Done</string>
    <string name="dlg_add_entry_message">Adding entry</string>
    <string name="dlg_load_amount_message">Loading amounts</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_initial_setting">Initial setting</string>

    <string name="tv_initial_setting_header">Choose a way to setup your sheet</string>

    <string name="btn_choose_sheet">Choose Google Sheet</string>

    <string name="btn_create_sheet">Create Google Sheet</string>
    <string name="title_activity_starting">Starting</string>

    <string name="msg_login_error">Sorry, some thing went wrong when login by google account</string>

</resources>
