<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_login"
        android:layout_marginTop="60dp"
        android:textSize="8pt"
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_account"
        android:layout_alignBaseline="@id/tv_login"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:onClick="onBtnChooseAccountClicked">
    </Button>

    <TextView
        android:id="@+id/tv_lb_selected_email"
        android:layout_marginTop="40dp"
        android:textSize="8pt"
        android:text="@string/selected_email"
        android:layout_below="@id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_selected_email"
        android:layout_marginTop="40dp"
        android:textSize="8pt"
        android:layout_toRightOf="@id/tv_lb_selected_email"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:onClick="onBtnDoneClicked">
    </Button>

</RelativeLayout>
