<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tbg.simplestvallet.activity.InitialSettingActivity">

    <TextView android:id="@+id/tv_initial_setting_header"
        android:text="@string/tv_initial_setting_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="14dp"/>

    <Button android:id="@+id/btn_choose_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:layout_below="@id/tv_initial_setting_header"
        android:layout_marginTop="16dp"
        android:text="@string/btn_choose_sheet"
        android:onClick="onBtnChooseSheetClicked"
        android:layout_centerHorizontal="true"/>

    <Button android:id="@+id/btn_create_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_choose_sheet"
        android:enabled="false"
        android:layout_marginTop="12dp"
        android:text="@string/btn_create_sheet"
        android:onClick="onBtnCreateSheetClicked"
        android:layout_centerHorizontal="true"/>

    <TextView android:id="@+id/tv_initial_setting_help_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:singleLine="false"
        android:layout_marginTop="25dp"
        android:layout_below="@id/btn_create_sheet"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
